[package]
authors = ["Cyanism <github@cyan.slmail.me>"]
description = "Escapes special character sequences."
edition = "2021"
homepage = "https://github.com/Cyanistic/escaper"
keywords = ["escape", "string", "special", "character"]
license = "GPL-3.0"
name = "escaper"
readme = "README.md"
repository = "https://github.com/Cyanistic/escaper"
version = "1.2.2"

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[dependencies]
aho-corasick = "1.1.2"

# [[bench]]
# name = "str_bench"
# harness = false
